force-app/main/default/objects/ARF_Cash_App_Rule__c/ARF_Cash_App_Rule__c.object-meta.xml
<CustomObject>
    <label>Cash Application Rule</label>
    <nameField><label>Rule Name</label><type>Text</type></nameField>
    <pluralLabel>Cash Application Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>