force-app/main/default/objects/ARF_Cash_App_Rule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>