force-app/main/default/objects/ARF_Cash_App_Rule__c/fields/Match_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Match_Threshold__c</fullName>
    <label>Match Threshold</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>90</defaultValue>
</CustomField>