force-app/main/default/objects/ARF_Cash_App_Rule__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>Human-readable name for this matching rule</description>
    <label>Rule Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>