force-app/main/default/objects/ARF_Cash_App_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Invoice_Number</fullName><default>false</default><label>Invoice Number</label></value>
            <value><fullName>PO_Number</fullName><default>false</default><label>PO Number</label></value>
            <value><fullName>Amount_Match</fullName><default>false</default><label>Amount Match</label></value>
            <value><fullName>Reference</fullName><default>false</default><label>Reference</label></value>
            <value><fullName>Customer_Name</fullName><default>false</default><label>Customer Name</label></value>
            <value><fullName>Sum_Match</fullName><default>false</default><label>Sum Match</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>